# async-standups

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  standup.py
standup/: config.py  filters.py  main.py  templating.py
standup/templates/: config.ini.j2  standup.md.j2  standup.slack.j2
