[tool.poetry]
name = "standup"
version = "0.0.1"
description = "Write, publish, and keep track of your async standup reports"
authors = [
    "Samuel Dion-Girardeau <samuel.diongirardeau@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/samueldg/async-standups"

keywords = ["standup"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~=8.0"
jinja2 = "~=3.0"
pyyaml = "~=6.0"
slack_sdk = "~=3.14"

[tool.poetry.dev-dependencies]
black = "~=22.0"
ruff = "~=0.0.216"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    '.vscode',
]
ignore = []
line-length = 99
select = [
    'B',
    'E',
    'F',
    'I',
    'Q',
    'UP',
    'W',
]

[tool.ruff.isort]
force-single-line = true

[tool.poetry.scripts]
standup = "standup.main:cli"

[build-system]
requires = ["poetry~=1.0"]
build-backend = "poetry.masonry.api"
