[tool.poetry]
name = "standup"
version = "0.0.2"
description = "Write, publish, and keep track of your async standup reports"
authors = [
    "Samuel Dion-Girardeau <samuel.diongirardeau@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/samueldg/async-standups"

keywords = ["standup"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "~=8.0"
jinja2 = "~=3.1"
pyyaml = "~=6.0"
slack_sdk = "~=3.14"

[tool.poetry.dev-dependencies]
ruff = "~=0.3.7"

[tool.black]

[tool.ruff]
target-version = 'py310'
line-length = 99
exclude = [
    '.git',
    '__pycache__',
    '.vscode',
]

[tool.ruff.lint]
ignore = []
select = [
    'B',
    'E',
    'F',
    'I',
    'Q',
    'UP',
    'W',
]
unfixable = [
    'F841',  # Don't delete unused vars
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.poetry.scripts]
standup = "standup.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
