[project]
name = "standup"
version = "0.0.2"
description = "Write, publish, and keep track of your async standup reports"
authors = [
    {name = "Samuel Dion-Girardeau", email = "samuel.diongirardeau@gmail.com"},
]
readme = "README.md"
keywords = [
    "standup",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "click<9.0,>=8.0",
    "jinja2<4.0,>=3.1",
    "pyyaml<7.0,>=6.0",
    "slack-sdk<4.0,>=3.14",
]

[project.urls]
repository = "https://github.com/samueldg/async-standups"

[project.scripts]
standup = "standup.main:cli"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.7.2",
]

[tool.ruff]
target-version = 'py310'
line-length = 99
exclude = [
    '.git',
    '__pycache__',
    '.vscode',
]

[tool.ruff.lint]
ignore = []
select = [
    'B',
    'E',
    'F',
    'I',
    'SIM',
    'UP',
    'W',
]
unfixable = [
    'F841',  # Don't delete unused vars
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv]
package = true
